# gen-ai-hackathon

./: .envc.example  .gitignore  INSTRUCTIONS.md  README.md  analytics_hackathon.ipynb  hackathon.ipynb  hackathon_answers.ipynb  ingest_to_data_store.sh  langchain_demo.ipynb  pyproject.toml  test.ipynb
.chroma/index/: id_to_uuid_bd11b4e0-957e-4c13-a4e6-87a9c0e803ed.pkl  index_metadata_bd11b4e0-957e-4c13-a4e6-87a9c0e803ed.pkl  uuid_to_id_bd11b4e0-957e-4c13-a4e6-87a9c0e803ed.pkl
database-analytics-hackathon/: README.md  pyproject.toml  requirements.txt
database_analytics/: analytics_hackathon.ipynb  answers_analytics_hackathon.ipynb  pyproject.toml  requirements.txt
dt-gen-ai-hackathon-helper/: Makefile  pyproject.toml
dt-gen-ai-hackathon-helper/dt_gen_ai_hackathon_helper/chains/: chains.py
dt-gen-ai-hackathon-helper/dt_gen_ai_hackathon_helper/embeddings/: embeddings.py
dt-gen-ai-hackathon-helper/dt_gen_ai_hackathon_helper/prompts/: prompts.py
dt-gen-ai-hackathon-helper/dt_gen_ai_hackathon_helper/storage/: bucket.py
dt-gen-ai-hackathon-helper/dt_gen_ai_hackathon_helper/view/: view.py
dt-gen-ai-hackathon-helper/dt_gen_ai_hackathon_helper/widgets/: widgets.py
dt_gen_ai_analytics-helper/: Makefile  README.md  main.py  pyproject.toml
dt_gen_ai_analytics-helper/dt_gen_ai_analytics_helper/bigquery/: bigquery.py
dt_gen_ai_analytics-helper/dt_gen_ai_analytics_helper/chains/: chains.py
dt_gen_ai_analytics-helper/dt_gen_ai_analytics_helper/database/: database.py
dt_gen_ai_analytics-helper/dt_gen_ai_analytics_helper/prompts/: AA.txt  google_sql.txt  resummarise.txt
dt_gen_ai_analytics-helper/dt_gen_ai_analytics_helper/view/: view.py
dt_gen_ai_hackathon_helper/: pyproject.toml  requirements.txt
dt_gen_ai_hackathon_helper/dt_gen_ai_hackathon_helper/vertex_ai_search/: vertex_ai_search.py
gen_ai_hackathon/backend/: .envrc.example  Dockerfile  Makefile  api.py  chains.py  cloudbuild.yaml  googlellm.py  pyproject.toml
gen_ai_hackathon/frontend/: .envrc.example  Dockerfile  Makefile  cloudbuild.yaml  main.py
hackathon/: qna.py
knowledge-worker-chromadb/backend/: pyproject.toml
knowledge-worker-chromadb/frontend/: Makefile  pyproject.toml
knowledge-worker-vertex-ai-search-hackathon/: README.md  hackathon_answers.ipynb
knowledge-worker-vertex-ai-search-hackathon/dt_gen_ai_hackathon_helper/: requirements.txt
knowledge-worker-vertex-ai-search-hackathon/dt_gen_ai_hackathon_helper/dt_gen_ai_hackathon_helper/embeddings/: embeddings.py
knowledge-worker-vertex-ai-search-hackathon/dt_gen_ai_hackathon_helper/dt_gen_ai_hackathon_helper/rate_limiter/: rate_limiter.py
knowledge-worker-vertex-ai-search-hackathon/dt_gen_ai_hackathon_helper/dt_gen_ai_hackathon_helper/vertex_ai_search/: vertex_ai_search.py
knowledge-worker-vertex-ai-search-hackathon/vertex_search/: create_app.sh  create_data_store.sh  list_data_stores.sh
knowledge_worker/: README.md  hackathon.ipynb  hackathon_answers.ipynb
knowledge_worker/dt_gen_ai_hackathon_helper/: README.md  pyproject.toml
knowledge_worker/dt_gen_ai_hackathon_helper/dt_gen_ai_hackathon_helper/chains/: chains.py
knowledge_worker/dt_gen_ai_hackathon_helper/dt_gen_ai_hackathon_helper/embeddings/: embeddings.py
knowledge_worker/dt_gen_ai_hackathon_helper/dt_gen_ai_hackathon_helper/formatter_helper/: formatter_helper.py
knowledge_worker/dt_gen_ai_hackathon_helper/dt_gen_ai_hackathon_helper/prompts/: prompts.py
knowledge_worker/dt_gen_ai_hackathon_helper/dt_gen_ai_hackathon_helper/view/: view.py
langchain-tech-stack-hackathon/: .envrc.example.sh  README.md  pyproject.toml
langchain_demo/: qna.py
notebook/: AA_hackathon.ipynb  README.md  analytics_hackathon.ipynb  analytics_hackathon_helper.ipynb  answers_analytics_hackathon.ipynb  answers_analytics_hackathon_helper.ipynb  pyproject.toml  requirements.txt
