[tool.poetry]
name = "gen-ai-hackathon"
version = "0.1.0"
description = "Intro to LangChain Hackathon"
authors = ["Zachary <zachary.smith@datatonic.com>"]

[tool.poetry.dependencies]
python = "^3.9.16"
langchain = "^0.0.225"
chromadb = "^0.3.21"
tiktoken = "^0.3.3"
unstructured = "^0.6.3"
tqdm = "^4.65.0"
google-cloud-aiplatform = "^1.25.0"
gradio = "^3.28.2"
google-auth = "^2.18.1"
jupyterlab = "^3.6.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
