[tool.poetry]
name = "dt-gen-ai-hackathon-helper"
version = "0.1.0"
description = "Intro to LangChain Hackathon Helper"
authors = ["Zachary <zachary.smith@datatonic.com>"]
packages = [{include = "dt_gen_ai_hackathon_helper"}]

[tool.poetry.dependencies]
python = "^3.9.16"
langchain = "^0.0.240"
chromadb = "^0.3.21"
tiktoken = "^0.3.3"
unstructured = "^0.6.3"
tqdm = "^4.65.0"
google-cloud-aiplatform = "^1.25.0"
gradio = "^3.28.2"
google-auth = "^2.18.1"
jupyterlab = "^3.6.3"
google-cloud-discoveryengine = "^0.9.1"
pydantic = "1.10.8"
typing-extensions = "4.5.0"
typing-inspect = "0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
