[tool.poetry]
name = "dt_gen_ai_analytics_helper"
version = "0.1.0"
description = ""
authors = ["robertanwokonko <roberta.nwokonko@datatonic.com>"]
packages = [{include = "dt_gen_ai_analytics_helper"}]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
langchain = "^0.0.288"
google-cloud-aiplatform = "^1.32.0"
google-cloud-storage = "^2.10.0"
google-cloud-bigquery-storage = "^2.22.0"
sqlalchemy-bigquery = "^1.8.0"
langchain-experimental = "^0.0.17"
pyarrow = "^13.0.0"
ipython = "^8.15.0"
gradio = "^3.44.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"
notebook = "^7.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
